sandbox-codebase/objects/zkmulti__MCCheckpoint__c/fields/zkmulti__Address__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>