sandbox-codebase/objects/zkmulti__MCCheckpoint__c/fields/zkmulti__Carrier_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Carrier_Date_Time__c</fullName>
    <formula>TEXT(zkmulti__Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Date Time</label>
    <type>Text</type>
</CustomField>