sandbox-codebase/objects/zkmulti__MCCheckpoint__c/fields/zkmulti__City__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__City__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>