sandbox-codebase/objects/zkmulti__MCCheckpoint__c/fields/zkmulti__Country__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Country__c</fullName>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>