sandbox-codebase/objects/zkmulti__MCCheckpoint__c/fields/zkmulti__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Geolocation__c</fullName>
    <label>Geolocation</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>