sandbox-codebase/objects/zkmulti__MCCheckpoint__c/fields/zkmulti__Location__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>