sandbox-codebase/objects/zkmulti__MCCheckpoint__c/fields/zkmulti__LocationOnMap__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__LocationOnMap__c</fullName>
    <formula>IMAGE(&apos;https://maps.googleapis.com/maps/api/staticmap?key=REMOVED&amp;zoom=13&amp;size=300x200&amp;markers=color:green|label:S|&apos;+ TEXT(zkmulti__Geolocation__Latitude__s) + &apos;,&apos; + TEXT(zkmulti__Geolocation__Longitude__s), &apos;Location&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location on Map</label>
    <type>Text</type>
</CustomField>