sandbox-codebase/objects/zkmulti__MCCheckpoint__c/fields/zkmulti__Message__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>