sandbox-codebase/objects/zkmulti__MCCheckpoint__c/fields/zkmulti__Shipment__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Shipment__c</fullName>
    <label>Shipment</label>
    <referenceTo>zkmulti__MCShipment__c</referenceTo>
    <relationshipName>Checkpoints</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>