sandbox-codebase/objects/zkmulti__MCCheckpoint__c/fields/zkmulti__Source__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>