sandbox-codebase/objects/zkmulti__MCCheckpoint__c/fields/zkmulti__State__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__State__c</fullName>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>