sandbox-codebase/objects/zkmulti__MCCheckpoint__c/fields/zkmulti__Status__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>