sandbox-codebase/objects/zkmulti__MCCheckpoint__c/fields/zkmulti__Zip__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Zip__c</fullName>
    <label>Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>